logs/febio.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/febio'...
Compiling './lib/python3.5/site-packages/febio/Boundary.py'...
***   File "./lib/python3.5/site-packages/febio/Boundary.py", line 31
    print 'WARNING: No degree of freedom was specified for this boundary condition.  Skipping...'
                                                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/febio/FebPlt.py'...
***   File "./lib/python3.5/site-packages/febio/FebPlt.py", line 101
    print 'File passed to FebPlt() is not an FEBio xplt. Exiting...'
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/febio/Load.py'...
***   File "./lib/python3.5/site-packages/febio/Load.py", line 28
    print 'WARNING: No degree of freedom was specified for this nodal force.  Skipping assignment...'
                                                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/febio/MatDef.py'...
***   File "./lib/python3.5/site-packages/febio/MatDef.py", line 22
    print "ERROR: You must specify a material id! Terminating execution..."
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/febio/MeshDef.py'...
***   File "./lib/python3.5/site-packages/febio/MeshDef.py", line 81
    print "WARNING: Element type "+dmy+" is not supported. This section will be ignored..."
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/febio/Model.py'...
***   File "./lib/python3.5/site-packages/febio/Model.py", line 91
    print 'ERROR: Sorry the '+mod+' module is not supported at this time. Terminating execution...'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/febio/verification'...
Listing './lib/python3.5/site-packages/febio-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
